implementing logic python file, dockerfile , filebeat.yml  for user service and requirements.txt for other apps

--- a/services/user-service/filebeat.yml
+++ b/services/user-service/filebeat.yml
@@ -2,9 +2,12 @@ filebeat.inputs:
 - type: docker
   containers.ids:
     - "${data.docker.container.id}"
+- type: stdin
 
 processors:
 - add_docker_metadata: ~
 
 output.logstash:
   hosts: ["logstash:5044"]
+
+  
