implementation logic and content of other files for notification service

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,71 @@
-# Python cache files
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
 
-# Environment files
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# PyCharm
+.idea/
+
+# Environments
 .env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
 # Logs
 logs/
 *.log
 
-# Docker files
+# Docker
+*.env
 docker-compose.override.yml
 
-# IDE files
-.vscode/
-.idea/
-
-# Mac system files
+# MacOS
 .DS_Store
+
+# Certificates
+*.pem
+*.key
+
+# Visual Studio Code
+.vscode/
