implementation logic for follower-service files

--- a/services/follower-service/Dockerfile
+++ b/services/follower-service/Dockerfile
@@ -1,23 +1,29 @@
 FROM python:3.9-slim
 
+# Install required packages
+RUN apt-get update && apt-get install -y curl
+
 # Set working directory
 WORKDIR /app
 
-# Install dependencies
-COPY requirements.txt .
-RUN pip install -r requirements.txt
-
 # Copy application code
-COPY app.py .
-COPY filebeat.yml /etc/filebeat/filebeat.yml
+COPY app.py requirements.txt ./
+
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Install Filebeat
 RUN curl -L -O https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.9.2-linux-x86_64.tar.gz && \
     tar xzvf filebeat-7.9.2-linux-x86_64.tar.gz && \
-    mv filebeat-7.9.2-linux-x86_64/filebeat /usr/local/bin/
+    mv filebeat-7.9.2-linux-x86_64/filebeat /usr/local/bin/ && \
+    rm -rf filebeat-7.9.2-linux-x86_64*
 
-# Expose port
+# Copy Filebeat configuration
+COPY filebeat.yml /usr/local/etc/filebeat.yml
+
+# Expose application port
 EXPOSE 8000
 
-# Start the application and Filebeat
-CMD ["sh", "-c", "filebeat -e & python app.py"]
+# Set the entrypoint to run Filebeat and the application
+CMD ["sh", "-c", "python app.py | filebeat -e -c /usr/local/etc/filebeat.yml"]
+
