--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,51 @@ services:
       - elasticsearch
     networks:
       - elk
+    
+  notification-service:
+    build: ./services/notification-service
+    ports:
+      - "8004:8000"
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+    depends_on:
+      - kafka
+    networks:
+      - app-network
+
+  follower-service:
+    build: ./services/follower-service
+    ports:
+      - "8005:8000"
+    environment:
+      - REDIS_HOST=redis
+    depends_on:
+      - redis
+    networks:
+      - app-network
+
+  search-service:
+    build: ./services/search-service
+    ports:
+      - "8006:8000"
+    environment:
+      - ELASTICSEARCH_HOST=elasticsearch
+    depends_on:
+      - elasticsearch
+    networks:
+      - app-network
+
+  direct-messaging-service:
+    build: ./services/direct-messaging-service
+    ports:
+      - "8007:8000"
+    environment:
+      - REDIS_HOST=redis
+    depends_on:
+      - redis
+    networks:
+      - app-network
+
 
 volumes:
   esdata:
@@ -58,3 +103,4 @@ networks:
     driver: bridge
   app-network:
     driver: bridge
+
